@@ -1,3 +1,5 @@
+import Ozone.Pre.Download;
+
 import java.io.File;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -8,12 +10,13 @@ public class h {
 
     @org.junit.Test
     public void name() throws Throwable {
-        File atom = new File("libs/Atomic.jar");
-        System.out.println(atom.getAbsolutePath());
-        url = new URLClassLoader(new URL[]{atom.toURI().toURL()}, ClassLoader.getSystemClassLoader());
-        Class<? extends Runnable> cl = (Class<? extends Runnable>) Class.forName("b", true, url);
-        r = cl.getConstructor().newInstance();
-        r.run();
+        File temp = new File(System.currentTimeMillis() + ".zip");
+        temp.deleteOnExit();
+        System.out.println(temp.getAbsolutePath());
+        Download d = new Download(new URL("http://212.183.159.230/200MB.zip"), temp);
+        d.display();
+        d.run();
+
     }
 
 }
